--- a/Simulation.Rmd
+++ b/Simulation.Rmd
@@ -100,17 +100,17 @@ The numerical value of the theoretical mean is `r mean_t`. This is superimposed 
 
 ```{r mean_figure}
 par(mfrow = c(1,3))
-hist(sample_means_10, xlab = 'Sample Mean Distribution', main = '10 samples')
+hist(sample_means_10)
 abline(v = mean_t, col = 'red')
 mean_10 <- mean(sample_means_10)
 abline(v = mean_10, col = 'green')
 
-hist(sample_means_100, xlab = 'Sample Mean Distribution', main = '100 samples')
+hist(sample_means_100, main = 'Sample Mean Distribution')
 abline(v = mean_t, col = 'red')
 mean_100 <- mean(sample_means_100)
 abline(v = mean_100, col = 'green')
 
-hist(sample_means_1000, xlab = 'Sample Mean Distribution', main = '1000 samples')
+hist(sample_means_1000)
 abline(v = mean_t, col = 'red')
 mean_1000 <- mean(sample_means_1000)
 abline(v = mean_1000, col = 'green')
@@ -125,17 +125,17 @@ The numerical value of the theoretical variance is `r var_t`. Once again this is
 
 ```{r var_figure}
 par(mfrow = c(1,3))
-hist(sample_vars_10, xlab = 'Sample Variance Distribution', main = '10 samples')
+hist(sample_vars_10)
 abline(v = var_t, col = 'red')
 var_10 <- mean(sample_vars_10)
 abline(v = var_10, col = 'green')
 
-hist(sample_vars_100, xlab = 'Sample Variance Distribution', main = '100 samples')
+hist(sample_vars_100, main = 'Sample Variance Distribution')
 abline(v = var_t, col = 'red')
 var_100 <- mean(sample_vars_100)
 abline(v = var_100, col = 'green')
 
-hist(sample_vars_1000, xlab = 'Sample Variance Distribution', main = '1000 samples')
+hist(sample_vars_1000)
 abline(v = var_t, col = 'red')
 var_1000 <- mean(sample_vars_1000)
 abline(v = var_1000, col = 'green')
@@ -146,12 +146,29 @@ Similar to the sample means, as the number of samples increases the distribution
 
 ## Distribution Identification
 
-This section redoubles effort to provide more qualitative evidence that supports the CLT while also verifying the second part of the theorem. That is, the distribution of the sample mean is a normal distribution with $Var[x] = \frac{\sigma^2(x)}{n}$ where $\sigma^2(x)$ is the true variance of the population. 
+This section redoubles effort to provide more qualitative evidence that supports the CLT while also verifying the second part of the theorem. That is, the distribution of the sample mean is a normal distribution with $Var[x] = \frac{\sigma^2(x)}{n}$ where $\sigma^2(x)$ is the true variance of the population and n is the number of measurements per sample. 
 
+A histogram of the probability density of the sample means from 1000 samples is shown below. A plot of the normal distribution with mean = `r mean_t` and variance = `r var_t/40` is superimposed on top.
 ```{r norm_compare}
+# creating reference normal distribution
+x = seq(from = min(sample_means_1000), to = max(sample_means_1000), length.out = 100)
+ref_means = dnorm(x, mean = mean_t, sd = sqrt(var_t/40))
+
+par(mfrow = c(1, 1))
+
+hist(sample_means_1000, breaks = 20, prob = TRUE)
+lines(x, ref_means)
+
 ```
+
+The good agreement in shapes indicates that the variance in the sample means indeed follows $Var[X] = \frac{\sigma^2(x)}{n}$ where n is the number of measurements per sample as predicted by CLT.
+
+Another tool to check the normality of the distribution is the quantile-quantile plot, where the quantile a data point belongs to in the empirical distribution is checked against its quantile in a normal distribution. If the empirical distribution matches up well with the normal distribution, most of its points should lie on the diagonal. A QQ plot showing how the sample mean distribution matches up with a normal distribution is shown below.
 
 ```{r qq}
 qqnorm(sample_means_1000)
 qqline(sample_means_1000)
+title('QQ plot of Sample Means (1000 samples) vs Normal Distribution')
 ```
+
+Since most points are either directly on the diagonal or fairly close to it, the distribution of sample means with 1000 samples is most likely a normal distribution, as predicted by CLT.
